--- a/package.json
+++ b/package.json
@@ -8,13 +8,47 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
     "@nrwl/cli": "14.1.4",
+    "@nrwl/eslint-plugin-nx": "14.1.4",
+    "@nrwl/jest": "14.1.4",
+    "@nrwl/linter": "14.1.4",
+    "@nrwl/node": "^14.1.4",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.1.4",
+    "@types/jest": "27.4.1",
+    "@types/node": "16.11.7",
+    "@types/winston": "^2.4.4",
+    "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "~5.18.0",
+    "@typescript-eslint/parser": "~5.18.0",
+    "eslint": "~8.12.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "27.5.1",
     "nx": "14.1.4",
     "prettier": "^2.5.1",
+    "ts-jest": "27.1.4",
+    "ts-node": "9.1.1",
     "typescript": "~4.6.2"
+  },
+  "dependencies": {
+    "@fastify/cors": "^7.0.0",
+    "@fastify/formbody": "^6.0.0",
+    "@neo4j/graphql": "^3.2.0",
+    "@neo4j/graphql-plugin-auth": "^1.0.0",
+    "apollo-server-cache-redis": "^3.3.1",
+    "apollo-server-core": "^3.7.0",
+    "apollo-server-express": "^3.7.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "fastify": "^3.29.0",
+    "graphql": "^16.4.0",
+    "graphql-ws": "^5.8.1",
+    "ioredis": "^5.0.4",
+    "neo4j-driver": "^4.4.5",
+    "supertokens-node": "^9.2.0",
+    "tslib": "^2.3.0",
+    "winston": "^3.7.2",
+    "ws": "^8.6.0"
   }
 }
