--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 services:
   neo4j:
     image: neo4j:community
@@ -69,8 +69,20 @@ services:
       - 1025:1025 # smtp server
       - 8025:8025 # web ui
 
+  cache:
+    image: redis:6.2.6-alpine
+    container_name: cache
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass <your redis password>
+    volumes:
+      - cache:/data
+
 volumes:
   search:
+    driver: local
+  cache:
     driver: local
 
 networks:
