--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nrwl/node": "^14.1.4",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.1.4",
+    "@types/graphql-upload": "^8.0.11",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/winston": "^2.4.4",
@@ -39,10 +40,12 @@
     "apollo-server-cache-redis": "^3.3.1",
     "apollo-server-core": "^3.7.0",
     "apollo-server-express": "^3.7.0",
+    "aws-sdk": "^2.1130.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "fastify": "^3.29.0",
     "graphql": "^16.4.0",
+    "graphql-upload": "^13.0.0",
     "graphql-ws": "^5.8.1",
     "ioredis": "^5.0.4",
     "neo4j-driver": "^4.4.5",
