--- a/nx.json
+++ b/nx.json
@@ -30,5 +30,21 @@
       }
     ]
   },
-  "defaultProject": "auth-rest-api"
+  "defaultProject": "auth-rest-api",
+  "generators": {
+    "@nrwl/react": {
+      "application": {
+        "style": "scss",
+        "linter": "eslint",
+        "babel": true
+      },
+      "component": {
+        "style": "scss"
+      },
+      "library": {
+        "style": "scss",
+        "linter": "eslint"
+      }
+    }
+  }
 }
