--- a/package.json
+++ b/package.json
@@ -10,24 +10,38 @@
   "private": true,
   "devDependencies": {
     "@nrwl/cli": "14.1.4",
+    "@nrwl/cypress": "14.1.4",
     "@nrwl/eslint-plugin-nx": "14.1.4",
     "@nrwl/jest": "14.1.4",
     "@nrwl/linter": "14.1.4",
     "@nrwl/node": "^14.1.4",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "^14.1.4",
+    "@nrwl/web": "14.1.4",
     "@nrwl/workspace": "14.1.4",
+    "@testing-library/react": "13.1.1",
     "@types/graphql-upload": "^8.0.11",
     "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
+    "@types/node": "^16.11.7",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
     "@types/winston": "^2.4.4",
     "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
+    "babel-jest": "27.5.1",
+    "cypress": "^9.1.0",
     "eslint": "~8.12.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.5.0",
     "jest": "27.5.1",
     "nx": "14.1.4",
     "prettier": "^2.5.1",
+    "react-test-renderer": "18.1.0",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2"
@@ -37,18 +51,26 @@
     "@fastify/formbody": "^6.0.0",
     "@neo4j/graphql": "^3.2.0",
     "@neo4j/graphql-plugin-auth": "^1.0.0",
+    "@types/hookrouter": "^2.2.5",
     "apollo-server-cache-redis": "^3.3.1",
     "apollo-server-core": "^3.7.0",
     "apollo-server-express": "^3.7.0",
     "aws-sdk": "^2.1130.0",
+    "bulma": "^0.9.4",
+    "core-js": "^3.6.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "fastify": "^3.29.0",
     "graphql": "^16.4.0",
     "graphql-upload": "^13.0.0",
     "graphql-ws": "^5.8.1",
+    "hookrouter": "^1.2.5",
     "ioredis": "^5.0.4",
     "neo4j-driver": "^4.4.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "regenerator-runtime": "0.13.7",
+    "supertokens-auth-react": "^0.20.4",
     "supertokens-node": "^9.2.0",
     "tslib": "^2.3.0",
     "winston": "^3.7.2",
