--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@nrwl/react": "^14.1.4",
     "@nrwl/web": "14.1.4",
     "@nrwl/workspace": "14.1.4",
+    "@nx-tools/nx-docker": "^2.3.0",
     "@testing-library/react": "13.1.1",
     "@types/graphql-upload": "^8.0.11",
     "@types/jest": "27.4.1",
+    "@types/minio": "^7.0.13",
     "@types/node": "^16.11.7",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
@@ -50,8 +52,14 @@
     "@apollo/client": "^3.6.2",
     "@fastify/cors": "^7.0.0",
     "@fastify/formbody": "^6.0.0",
+    "@graphql-mesh/cli": "^0.70.3",
+    "@graphql-mesh/openapi": "^0.25.6",
+    "@graphql-tools/schema": "^8.3.11",
+    "@graphql-tools/utils": "^8.6.10",
+    "@hyperledger/firefly-sdk": "^0.1.0-alpha.13",
     "@neo4j/graphql": "^3.2.0",
     "@neo4j/graphql-plugin-auth": "^1.0.0",
+    "apollo-datasource-rest": "^3.5.3",
     "apollo-server-cache-redis": "^3.3.1",
     "apollo-server-core": "^3.7.0",
     "apollo-server-express": "^3.7.0",
@@ -63,17 +71,21 @@
     "fastify": "^3.29.0",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
+    "graphql-type-json": "^0.3.2",
     "graphql-upload": "^13.0.0",
     "graphql-ws": "^5.8.1",
     "ioredis": "^5.0.4",
+    "minio": "^7.0.28",
     "neo4j-driver": "^4.4.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-router-dom": "^6.3.0",
     "regenerator-runtime": "0.13.7",
+    "routing-controllers": "^0.9.0",
     "supertokens-auth-react": "^0.20.4",
     "supertokens-node": "^9.2.0",
     "tslib": "^2.3.0",
+    "web3": "^1.7.3",
     "winston": "^3.7.2",
     "ws": "^8.6.0",
     "yup": "^0.32.11"
