--- a/docker/development/supertokens/docker-compose.yml
+++ b/docker/development/supertokens/docker-compose.yml
@@ -30,8 +30,8 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=supertokens
-    #ports:
-    #  - '5432:5432'
+    ports:
+      - '5432:5432'
     volumes:
       - supertokens-data:/var/lib/postgresql/data
 
