Docker for auth-rest-api

--- a/apps/auth-rest-api/project.json
+++ b/apps/auth-rest-api/project.json
@@ -50,7 +50,7 @@
       "executor": "@nx-tools/nx-docker:build",
       "options": {
         "push": false,
-        "tags": ["smart-tickets/auth-api:latest", "smart-tickets/auth-api:v1"]
+        "tags": ["auth-rest-api:latest", "auth-rest-api:v1"]
       }
     },
     "tags": ["auth"]
